--- a/FoodGame/FoodGame.vcxproj
+++ b/FoodGame/FoodGame.vcxproj
@@ -144,9 +144,11 @@
   <ItemGroup>
     <ClCompile Include="Food.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="Snake.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Food.h" />
+    <ClInclude Include="Snake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
